# nerstrand

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Changelog  INSTALL  LICENSE  README.md  appveyor.yml  configure  doxygen.conf  mkpkg.sh
include/: CMakeLists.txt  nerstrand.h
src/: CMakeLists.txt  aggregate.c  aggregate.h  base.c  base.h  cluster.c  cluster.h  coarsen.c  coarsen.h  contract.c  contract.h  graph.c  graph.h  initialclustering.c  initialclustering.h  io.c  io.h  mgraph.c  mgraph.h  multilevel.c  multilevel.h  nerstrand.c  nerstrand_bin.c  newman.c  newman.h  objective.c  objective.h  project.c  project.h  refine.c  refine.h  sparsen.c  sparsen.h  stats.c  stats.h  strings.h  ucinfo.c  ucinfo.h  uncoarsen.c  uncoarsen.h
